--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,11 @@ MONGODB_URL=
 MONGODB_DB=
 TELEGRAM_KEY=
 TELEGRAM_CHAT_ID=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
+JWT_SECRET=
+APP_DOMAIN=
